# salii

./: .gitignore  AUTHORS  CHANGELOG  CHANGELOG.md  CHANGELOG.sali  CREDITS  Changelog  DEVELOPER_GUIDELINES  FLAVOR  Makefile  Makefile.in  README  README.SystemImager_DHCP_options  README.md  README.package_maintainers  TODO  TODO.md  VERSION  configure  configure.ac  debian_packages.sh  init  package.json  sali-cli  sali-test-client  systemimager.spec  test_client.sh  test_vm.sh
archive/: requirements.txt
bootdisk/: README  create  sali_create_bootdisk.in
bootdisk/isolinux/: isolinux.cfg  ldlinux.c32  libcom32.c32  libutil.c32  vesamenu.c32
buildroot/: external.desc
buildroot/configs/: sali_x86_64_defconfig  salii_x86_64_defconfig
client/: Config.in  README.md  busybox.config  deprecated.sh  external.mk  linux.x86_64.config
client/configs/: sali_defconfig
client/docs/: file_structure.txt  installer_process.txt
client/files/: cmdline  master_script  rsyncd.conf
client/rootfs_overlay/: init
contrib/: getimage  sali.pm  sali_prepare
contrib/sali_image_dir_exclude/: default.path
debian/: changelog  control.in  rules
devel/files/: cmdline  master_script  rsyncd.conf
doc/examples/: autoinstallscript.conf-lvm_over_raid  screencaptured_multicast_install.txt  yaboot.conf
doc/man/: Makefile
doc/manual_source/: Makefile  README.manual  faq.sgml  systemimager-manual.sgml
docs/: file_structure.txt  remove_rewrite_functions  verwijderen_herschijven.txt
etc/: autoinstallscript.template  bittorrent.conf  client.conf  flamethrower.conf  inittab  passwd  profile  rsyncd.conf  systemimager.conf  updateclient.local.exclude
etc/init.d/: functions  systemimager-server-flamethrowerd  systemimager-server-netbootmond  systemimager-server-rsyncd
etc/installer.d/: S1_fetch_installation_data  S1_prepare
etc/network/: interfaces
etc/pxelinux.cfg/: message.txt
etc/rsync_stubs/: 10header  README
etc/sali/: console_file  default_variables  error_file  error_startup_file
etc/ssh/: ssh_config  sshd_config
etc/startup.d/: S1_network  S2_preparation  S3_sshd
etc/udhcpc/: default.bound
example/: masterscript.new  masterscript.old  pxelinux.example
example/post-install/: 02all.bootloader  98all.pxeconfig
examples/: README.md  sali-prepare.template  sali.ini
examples/buildroot/: cmdline
examples/installation_scripts/: cc_soil  master_script  network_interfaces
examples/sali-cli-config/: logging.ini  rsyncd.conf.template
files/: cmdline  master_script
initrd/: README.initrd  copy_libs  initrd.rul
initrd/functions/: sali_functions
initrd/make.d/: aria2.rul  bc.rul  busybox.rul  curl.rul  e2fsprogs.rul  jfsutils.rul  kerneltools.rul  kexec.rul  libusb.rul  lsscsi.rul  lvm.rul  mdadm.rul  openssh.rul  openssl.rul  parted.rul  reiserfsprogs.rul  rsync.rul  scrub.rul  udev.rul  usbutils.rul  xfsprogs.rul  xmlrpc-c.rul
initrd/patches/: busybox.standard.config  busybox.udhcpc.options.patch
initrd/sali/: init
initrd/skel/: init
initrd_source/: initrd.rul
initrd_source/make.d/: README  aria2.rul  bc.rul  busybox.rul  cx_freeze.rul  dhclient.rul  e2fsprogs.rul  gzip.rul  jfsutils.rul  kerneltools.rul  kexec.rul  lsb.rul  lvm.rul  mdadm.rul  openssh.rul  openssl.rul  parted.rul  reiserfsprogs.rul  rsync.rul  sysvinit.rul  tar.rul  udev.rul  udpcast.rul  xfsprogs.rul
initrd_source/my_modules/: INSMOD_COMMANDS
initrd_source/patches/: README  busybox.standard.config
kernel/make.d/: kernel.rul  zlib.rul
kernel/patches/: linux.i386.config  linux.x86_64.config
lib/: confedit
make.d/: README  bc.rul  bittorrent.rul  boel_binaries.inc  discover.rul  dosfstools.rul  e2fsprogs.rul  hfsutils.rul  jfsutils.rul  kernel.rul  lvm.rul  mdadm.rul  openssh.rul  openssl.rul  parted.rul  pdisk.rul  popt.rul  reiserfsprogs.rul  tar.rul  util-linux.rul  zlib.rul
old/: parse_script.sh  tst.sh
patches/: README.patches  linux.i386.config  linux.ppc64.config  linux.ppc64ydl.config  linux.x86_64.config  util-linux.10.cramfs-fsck.patch
python-libs/: setup.py
sali/: __init__.py  common.py  configuration.py  exceptions.py  getimage.py  imaging.py  release.py  tools.py
sali-project/: CHANGELOG  README.md
sbin/: sali_installer  sali_startup  si_addclients  si_cpimage  si_getimage  si_installbtimage  si_mkautoinstallcd  si_mkautoinstallscript  si_mkbootpackage  si_mkbootserver  si_mkclientnetboot  si_mkdhcpserver  si_mkdhcpstatic  si_mkrsyncd_conf  si_mvimage  si_netbootmond  si_prepareclient  si_rmimage  si_updateclient
server/: setup.py  setup.py.in
test_files/: cmdline  interfaces  master_script
tools/: copy_firmwares  copy_libs  copy_linux_firmware.sh  debian_packages.sh  getsource  my_modules  new_release_sali  sali  sali.cfg  sali_check  sali_server  si_install  sles_packages.sh  test_client.sh
(+318 files in other folders)
